# totpy_auth

./: .gitignore  README.md  pyproject.toml  setup.cfg  tox.ini
requirements/: requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
scripts/: compile_requirements.sh  format.sh  install_requirements_dev.sh  lint.sh  test.sh
src/totpy_auth/: __init__.py  client.py  key_derivation.py  logging_config.py  main.py  server.py
tests/unit/: test_foo.py
