[metadata]
name = totpy_auth
description = totp auth client and server project
author = VIP
license = MIT
license_files = LICENSE
version = attr: totpy_auth.__version__
platforms = unix, linux
classifiers =
    Typing :: Typed
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.12

[options]
install_requires =
    cryptography

python_requires = >=3.9
package_dir =
    =src
packages = find:
zip_safe = no

[options.packages.find]
where=src

[options.package_data]
totpy_auth = py.typed
